--- a/index.html
+++ b/index.html
@@ -977,6 +977,11 @@ async function fetchData() {
                         </div>
                         
                         <div id="userData" class="grid grid-cols-1 sm:grid-cols-2 gap-4"></div>
+
+                        <div class="p-4 bg-indigo-50 rounded-md mt-6">
+                            <h5 class="font-semibold text-indigo-800 mb-2">Sobre o Event Bubbling</h5>
+                            <p class="text-sm text-indigo-700 mb-3 ">Nesse caso para fazer o fetch, utilizamos um JsonPlaceHolder, uma Fake Api. Ela é utilizada para demonstração de testes ou prótotipos, assim como o Postman ou Insomnia.</p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -1826,7 +1831,7 @@ renderTodos();</code></pre>
                                     <div class="mb-4">
                                         <form id="project-demo-form" class="flex">
                                             <input type="text" placeholder="Adicionar nova tarefa..." class="flex-grow px-4 py-2 border rounded-l focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                                            <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded-r hover:bg-indigo-700 transition">
+                                            <button type="submit" class="bg-indigo-600 text-white px-2 py-2 rounded-r hover:bg-indigo-700 transition">
                                                 Adicionar
                                             </button>
                                         </form>
